update XGboost model with k-fold cross validation

--- a/XGboost-Ben.ipynb
+++ b/XGboost-Ben.ipynb
@@ -645,6 +645,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 96.92% (0.37%)\n",
+      "Recall 78.72946035736733\n",
+      "Precision 83.90489474517253\n"
+     ]
+    }
+   ],
+   "source": [
+    "# k-fold cross validation evaluation of xgboost model\n",
+    "\n",
+    "import xgboost\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# CV model\n",
+    "model = xgboost.XGBClassifier()\n",
+    "kfold = KFold(n_splits=10, random_state=7)\n",
+    "results = cross_val_score(model, X, y, cv=kfold)\n",
+    "print(\"Accuracy: %.2f%% (%.2f%%)\" % (results.mean()*100, results.std()*100))\n",
+    "recall = cross_val_score(model, X, y, cv=5, scoring='recall')\n",
+    "print('Recall', 100*np.mean(recall))\n",
+    "\n",
+    "precision = cross_val_score(model, X, y, cv=5, scoring='precision')\n",
+    "print('Precision', 100*np.mean(precision))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
