--- a/notebooks/XGboost-Ben.ipynb
+++ b/notebooks/XGboost-Ben.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "from src.clean_data import clean_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,6 +695,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model, open('models/XG_boost_model.p', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
@@ -706,7 +719,7 @@
     }
    ],
    "source": [
-    "# k-fold cross validation evaluation of xgboost model\n",
+    "# k-fold cross validation evaluation of XGboost model\n",
     "\n",
     "import xgboost\n",
     "from sklearn.model_selection import KFold\n",
@@ -726,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
