--- a/notebooks/test_website.ipynb
+++ b/notebooks/test_website.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "\n",
@@ -76,64 +67,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = MongoClient('localhost', 27017)\n",
     "db = client['frauds']\n",
-    "table = db['new_events8']"
+    "table = db['new_events12']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = table.find().sort([('sequence', -1)]).sort([('fraud_probability', -1)])"
+    "entries = table.find().sort([('sequence', -1)]).sort([('fraud_probability', -1)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5ed14aa09a45c149f8aa3d6b'), 'sequence': '2935', 'object_id': '4805725', 'name': 'AbFabParties - Single guys - Members (Fridays) 23.11.12', 'org_name': 'AbFabParties', 'fraud_probability': 0.07890152732135769, 'risk_factor': 'low'}\n",
-      "{'_id': ObjectId('5ed149909a45c149f8aa3d67'), 'sequence': '2933', 'object_id': '4782675', 'name': 'Story-Based Technical and Compliance eLearning Design Workshop', 'org_name': 'Vignettes Learning', 'fraud_probability': 0.00473030028268193, 'risk_factor': 'low'}\n",
-      "{'_id': ObjectId('5ed14b559a45c149f8aa3d6d'), 'sequence': '2936', 'object_id': '4815441', 'name': 'NDP Christmas Party', 'org_name': 'New Direction Partnership', 'fraud_probability': 0.0036672776133981518, 'risk_factor': 'low'}\n",
-      "{'_id': ObjectId('5ed149ea9a45c149f8aa3d69'), 'sequence': '2934', 'object_id': '4800273', 'name': '', 'org_name': 'PRAISE TEMPLE OF CHRIST', 'fraud_probability': 0, 'risk_factor': 'Unable to Predict'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for each_ in a:\n",
-    "    print(each_)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-6a861a8b3f1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1"
+    "unable = 0\n",
+    "low = 0\n",
+    "medium = 0\n",
+    "high = 0\n",
+    "for each_ in entries:\n",
+    "    if each_['risk_factor'] == 'Unable to Predict':\n",
+    "        unable += 1\n",
+    "    elif each_['risk_factor'] == 'low':\n",
+    "        low += 1\n",
+    "    elif each_['risk_factor'] == 'medium':\n",
+    "        medium += 1\n",
+    "    else:\n",
+    "        high += 1"
    ]
   },
   {
