update readme overview

--- a/notebooks/eda_tyler.ipynb
+++ b/notebooks/eda_tyler.ipynb
@@ -5258,9 +5258,7 @@
     }
    ],
    "source": [
-    "df[(df['ticket_type_length'] == True) & (df['fraud'] == True)][['fraud','ticket_type_length']]\n",
-    "\n",
-    "\n"
+    "df[(df['ticket_type_length'] == True) & (df['fraud'] == True)][['fraud','ticket_type_length']]"
    ]
   },
   {
@@ -5731,7 +5729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
