--- a/notebooks/cindy_models.ipynb
+++ b/notebooks/cindy_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -36,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frauds = pd.read_json('data/data.json')"
+    "# frauds = pd.read_json('../data/data.json')"
    ]
   },
   {
@@ -49,16 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frauds.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = clean_data(frauds)"
+    "df = pd.read_csv('')"
    ]
   },
   {
